--- a/client/src/custom.css
+++ b/client/src/custom.css
@@ -1,5 +1,15 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+
+}
 body {
   font-family: 'Helvetica';
+}
+.body{
+  width: 98%;
+  margin: 1rem;
 }
 h1,
 h2,
@@ -53,13 +63,23 @@ button {
   width: 100%;
   cursor: pointer;
 }
+
+button:hover{
+  background-color: #40c0f0;
+}
+button.checkout{
+  width: 80%;
+  margin: auto;
+
+}
+
 button.add {
   background-color: #40c0f0;
-  width: 1.5rem;
+  width: 2rem;
 }
 button.remove {
   background-color: #f04040;
-  width: 1.5rem;
+  width: 2rem;
 }
 button.badge {
   background-color: #f04040;
